Updated notebook with diagram

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -169,9 +169,7 @@
     "while the **Refiner Agent** improves the report quality based on critique feedback. The **Memory Agent** stores key \n",
     "insights from previous runs, allowing the system to improve continuously across sessions. Finally,it generates the final, data-driven investment report.\n",
     "\n",
-    "![Multi-Agent Financial Analysis Workflow](MultiAgentFinSystem.drawio.png)\n",
-    "\n",
-    "*Figure: Multi-Agent Financial Analysis System — demonstrating Planner–Executor workflow with Critic, Refiner, and Memory Agents integrated into a self-improving financial research process.*"
+    "![Multi-Agent Financial Analysis Workflow](MultiAgentFinSystem.drawio.png)"
    ]
   },
   {
